--- a/style.css
+++ b/style.css
@@ -1,28 +1,30 @@
-img{
-width: 100%;
+img {
+    width: 100%;
 
 
 }
 
-.cabecalho{
-width: 1000px;
-height: 100px;
-background-color: blueviolet;
+.cabecalho {
+    width: 1000px;
+    height: 100px;
+    background-color: blueviolet;
 
 
 
 }
-.primeirasecao{
 
+.primeirasecao {
+    display: flex;
     width: 1000px;
     height: 500px;
     background-color: rgb(86, 226, 43);
-    
+
 
 
 }
-.divisao{
+
+.divisao {
     width: 200px;
-height: 200px;
-background-color: rgb(12, 106, 150);
+    height: 200px;
+    background-color: rgb(12, 106, 150);
 }
